# Django-Stripe

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: db.sqlite3  requirements.txt
app/base/: admin.py  urls.py
app/base/migrations/: 0001_initial.py  0002_order_orderitem.py
app/base/models/: __init__.py  cart.py  item.py
app/base/services/: cart.py  order.py  payment.py  webhook.py
app/base/static/stripe/css/: cart.css
app/base/static/stripe/js/: stripe_checkout.js
app/base/templates/stripe/: cancel.html  cart.html  intent.html  item.html  success.html
app/base/views/: cart.py  item.py  payment.py
app/config/: settings.py  urls.py
docker/nginx/: Dockerfile  nginx.conf
