[tool.poetry]
name = "django-stripe"
version = "0.1.0"
description = ""
authors = ["Satan1437 <exemplles.white@gmail.com>"]
readme = "README.md"
packages = [{include = "django_stripe"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
stripe = "^5.1.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
